@@ -5,30 +5,43 @@
     <groupId>com.epam.jdi</groupId>
     <artifactId>jdi-dark-bdd-tests</artifactId>
     <name>JDI Dark BDD Tests</name>
-    <version>1.1.12</version>
+    <version>1.1.13</version>
 
     <properties>
-        <includeTags>@smoke</includeTags>
-        <excludeTags>@skip</excludeTags>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <aspectj.version>1.9.5</aspectj.version>
         <allure.maven.version>2.10.0</allure.maven.version>
-        <allure.cucumber.jvm.version>2.13.1</allure.cucumber.jvm.version>
-        <allure.common.version>2.13.1</allure.common.version>
+        <allure.common.version>2.20.1</allure.common.version>
         <junit.version>4.12</junit.version>
-        <surefire.version>2.22.2</surefire.version>
-        <jdi.dark.bdd.version>1.1.12</jdi.dark.bdd.version>
-        <!-- - - add-opens java.base/java.lang=ALL-UNNAMED is needed for JDK 16+ -->
+        <surefire.version>3.0.0-M7</surefire.version>
+        <jdi.dark.version>1.1.13</jdi.dark.version>
+        <cucumber.version>7.10.1</cucumber.version>
+        <!-- use jdk16 profile for JDK 16+ -->
         <aspectj.args></aspectj.args>
     </properties>
+
+    <profiles>
+        <profile>
+            <id>jdk16</id>
+            <properties>
+                <aspectj.args>--add-opens java.base/java.lang=ALL-UNNAMED</aspectj.args>
+            </properties>
+        </profile>
+    </profiles>
 
     <dependencies>
         <!--JDI-->
         <dependency>
             <groupId>com.epam.jdi</groupId>
             <artifactId>jdi-dark-bdd</artifactId>
-            <version>${jdi.dark.bdd.version}</version>
+            <version>${jdi.dark.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>${cucumber.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.qameta.allure</groupId>
@@ -37,8 +50,8 @@
         </dependency>
         <dependency>
             <groupId>io.qameta.allure</groupId>
-            <artifactId>allure-cucumber4-jvm</artifactId>
-            <version>${allure.cucumber.jvm.version}</version>
+            <artifactId>allure-cucumber7-jvm</artifactId>
+            <version>${allure.common.version}</version>
         </dependency>
     </dependencies>
     <build>
@@ -57,26 +70,12 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire.version}</version>
                 <configuration>
+                    <failIfNoTests>true</failIfNoTests>
                     <systemPropertyVariables>
                         <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
                     </systemPropertyVariables>
-                    <suiteXmlFiles>
-                        <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
-                    </suiteXmlFiles>
                     <!-- testFailureIgnore>true</testFailureIgnore -->
-                    <argLine>
-                        ${aspectj.args}
-                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
-                        -Dcucumber.options="--plugin io.qameta.allure.cucumber4jvm.AllureCucumber4Jvm"
-                    </argLine>
                 </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.aspectj</groupId>
-                        <artifactId>aspectjweaver</artifactId>
-                        <version>${aspectj.version}</version>
-                    </dependency>
-                </dependencies>
             </plugin>
             <plugin>
                 <groupId>io.qameta.allure</groupId>
